Add receipt to payment init
