# api/openapi.yaml
@@ -141,7 +141,7 @@ components:
           example: ok
     CreatePaymentRequest:
       type: object
-      required: [order_id, amount_minor, currency]
+      required: [order_id, amount_minor, currency, receipt]
       properties:
         order_id:
           type: string
@@ -161,12 +161,72 @@ components:
           example: bank_card
         customer:
           $ref: '#/components/schemas/Customer'
+        receipt:
+          $ref: '#/components/schemas/Receipt'
     Customer:
       type: object
       properties:
         email:
           type: string
           format: email
+    Receipt:
+      type: object
+      required: [taxation, items]
+      properties:
+        email:
+          type: string
+          format: email
+          maxLength: 64
+        phone:
+          type: string
+          maxLength: 64
+        taxation:
+          $ref: '#/components/schemas/ReceiptTaxation'
+        items:
+          type: array
+          minItems: 1
+          maxItems: 100
+          items:
+            $ref: '#/components/schemas/ReceiptItem'
+    ReceiptItem:
+      type: object
+      required: [name, price_minor, quantity, amount_minor, tax]
+      properties:
+        name:
+          type: string
+          minLength: 1
+          maxLength: 128
+        price_minor:
+          type: integer
+          format: int64
+          minimum: 1
+        quantity:
+          type: number
+          format: double
+          minimum: 0
+          exclusiveMinimum: true
+        amount_minor:
+          type: integer
+          format: int64
+          minimum: 1
+        payment_method:
+          $ref: '#/components/schemas/ReceiptPaymentMethod'
+        payment_object:
+          $ref: '#/components/schemas/ReceiptPaymentObject'
+        tax:
+          $ref: '#/components/schemas/ReceiptTax'
+    ReceiptTaxation:
+      type: string
+      enum: [osn, usn_income, usn_income_outcome, esn, patent]
+    ReceiptPaymentMethod:
+      type: string
+      enum: [full_prepayment, prepayment, advance, full_payment, partial_payment, credit, credit_payment]
+    ReceiptPaymentObject:
+      type: string
+      enum: [commodity, excise, job, service, gambling_bet, gambling_prize, lottery, lottery_prize, intellectual_activity, payment, agent_commission, composite, another]
+    ReceiptTax:
+      type: string
+      enum: [none, vat0, vat5, vat7, vat10, vat22, vat105, vat107, vat110, vat122]
     PaymentResponse:
       type: object
       required: [payment_id, order_id, amount_minor, currency, status]
